<resources>
    <string name="app_name">Me And My Darling</string>
    <string name="cardie">Cardie</string>
    <string name="lana">Lana</string>
    <string name="jennifer">Jennifer</string>
    <string name="mia">Mia</string>
    <string name="adele">Adele</string>
    <string name="elza">Elza</string>
    <string name="margaret">Margaret</string>
    <string name="picture">picture</string>
    <string name="sophia">Sophia</string>
</resources>